--- a/src/output.css
+++ b/src/output.css
@@ -660,12 +660,20 @@ video {
   height: 50px;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
 .w-\[50px\] {
   width: 50px;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .shrink-0 {
@@ -783,6 +791,10 @@ video {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.object-cover {
+  object-fit: cover;
 }
 
 .p-1 {
