--- a/src/output.css
+++ b/src/output.css
@@ -664,6 +664,10 @@ video {
   height: 200px;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .w-\[50px\] {
   width: 50px;
 }
@@ -674,6 +678,10 @@ video {
 
 .w-\[200px\] {
   width: 200px;
+}
+
+.w-\[300px\] {
+  width: 300px;
 }
 
 .shrink-0 {
@@ -702,6 +710,10 @@ video {
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -734,6 +746,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b {
