--- a/src/output.css
+++ b/src/output.css
@@ -562,12 +562,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .line-clamp-1 {
@@ -600,20 +600,20 @@ video {
   display: grid;
 }
 
-.h-\[200px\] {
-  height: 200px;
+.h-\[100vh\] {
+  height: 100vh;
 }
 
-.h-\[50px\] {
-  height: 50px;
+.h-\[200px\] {
+  height: 200px;
 }
 
 .h-\[300px\] {
   height: 300px;
 }
 
-.h-\[100vh\] {
-  height: 100vh;
+.h-\[50px\] {
+  height: 50px;
 }
 
 .w-\[50px\] {
@@ -622,6 +622,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .max-w-\[600px\] {
@@ -662,10 +666,6 @@ video {
 
 .content-center {
   align-content: center;
-}
-
-.items-center {
-  align-items: center;
 }
 
 .justify-center {
@@ -775,23 +775,19 @@ video {
   text-align: center;
 }
 
-.align-middle {
-  vertical-align: middle;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -801,22 +797,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
-}
-
-.leading-normal {
-  line-height: 1.5;
-}
-
-.leading-none {
-  line-height: 1;
-}
-
-.leading-loose {
-  line-height: 2;
 }
 
 .text-\[\#32cd32\] {
@@ -829,14 +809,9 @@ video {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
-.text-white {
+.text-blue-800 {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -847,6 +822,16 @@ video {
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
 .filter {
