--- a/src/output.css
+++ b/src/output.css
@@ -621,6 +621,26 @@ video {
   height: 50px;
 }
 
+.h-\[70px\] {
+  height: 70px;
+}
+
+.h-\[3rem\] {
+  height: 3rem;
+}
+
+.h-\[4rem\] {
+  height: 4rem;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-\[140px\] {
+  height: 140px;
+}
+
 .w-\[50px\] {
   width: 50px;
 }
@@ -631,6 +651,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .shrink-0 {
@@ -675,6 +699,10 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .overflow-hidden {
