--- a/src/output.css
+++ b/src/output.css
@@ -549,22 +549,18 @@ video {
   margin: 0.25rem;
 }
 
-.m-2 {
-  margin: 0.5rem;
-}
-
 .m-auto {
   margin: auto;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mt-2 {
@@ -609,6 +605,10 @@ video {
   height: 100vh;
 }
 
+.h-\[140px\] {
+  height: 140px;
+}
+
 .h-\[200px\] {
   height: 200px;
 }
@@ -617,28 +617,16 @@ video {
   height: 300px;
 }
 
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-\[70px\] {
-  height: 70px;
-}
-
-.h-\[3rem\] {
-  height: 3rem;
-}
-
 .h-\[4rem\] {
   height: 4rem;
 }
 
-.h-\[150px\] {
-  height: 150px;
+.h-\[50px\] {
+  height: 50px;
 }
 
-.h-\[140px\] {
-  height: 140px;
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .w-\[50px\] {
@@ -651,10 +639,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[10rem\] {
-  width: 10rem;
 }
 
 .shrink-0 {
@@ -725,6 +709,10 @@ video {
   border-width: 2px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -737,6 +725,11 @@ video {
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.border-r-gray-200 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-blue-500 {
