the Posts component is decomposed, a separate component PostsTable and a reusable component FilterBar are taken out of it; Table cell reusable style extracted to PostsTable.css; Link reusable style extracted everywhere;

--- a/src/main.css
+++ b/src/main.css
@@ -27,6 +27,10 @@ code {
   animation: rotation 1s linear infinite;
 }
 
+.link {
+  @apply text-blue-600 visited:text-purple-600
+}
+
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
