All hooks were moved to /hooks and reused on Dashboard and User pages; FilterBar was moved to /components and reused in Albums and Photos; extracted and reused getCommonSearchParams util in Albums, Photos, Posts;

--- a/src/main.css
+++ b/src/main.css
@@ -31,6 +31,10 @@ code {
   @apply text-blue-600 visited:text-purple-600
 }
 
+.counter{
+  @apply text-[#32cd32] text-lg font-bold mr-1
+}
+
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
